--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,13 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "server.js"
+        "dest": "server.js", 
+        "methods": [
+            "GET",
+            "POST",
+            "PUT",
+            "DELETE"
+        ]
       }
     ]
   }
