--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "blog-api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "startapp": "nodemon ./api.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./node_modules/.bin/netlify-lambda serve",
+    "build": "./node_modules/.bin/netlify-lambda build"
   },
   "author": "",
   "license": "ISC",
@@ -23,11 +24,15 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
     "multer": "^1.4.5-lts.1",
+    "netlify-lambda": "^2.0.16",
     "nodemailer": "^6.9.1",
     "nodemailer-express-handlebars": "^6.1.0",
+    "serverless-http": "^3.2.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
