--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "startapp": "nodemon ./api.js",
+    "startapp": "nodemon ./src/api.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "./node_modules/.bin/netlify-lambda serve",
     "build": "./node_modules/.bin/netlify-lambda build"
