--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "blog-api",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": { "node": "18.x"},
   "scripts": {
-    "start": "nodemon ./server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
