--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
      {
-         "src": "./index.js",
-         "use": "@vercel/node"
+         "src": "index.js",
+         "use": "@now/node"
      }
     ],
     "routes": [
      {
          "src": "/(.*)",
-         "dest": "/api"
+         "dest": "index.js"
      }
     ]
  }
